--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,6 @@ and open the template in the editor.
         <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <h1>Hola Pablo!!!!</h1>
+        <h1>CASILLAS VENDIDO</h1>
     </body>
 </html>
